# voiceops-sentinel

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  agents.py  auth.py  config.py  knowledge.py  main.py  models.py  policy.py  repository.py  service.py  telemetry.py  voice.py
docs/runbooks/: production-readiness.md
evaluations/: golden_dataset.jsonl
infra/bicep/: main.bicep  main.bicepparam
static/: app.js  index.html  styles.css
tests/: test_evaluations.py  test_service.py
