[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceops-sentinel"
version = "0.1.0"
description = "Governed multi-agent voice operations platform for Azure"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.32,<1",
  "pydantic>=2.10,<3",
  "PyJWT[crypto]>=2.10,<3",
  "httpx>=0.28,<1",
  "autogen-agentchat>=0.7,<1",
  "autogen-ext[openai]>=0.7,<1",
  "azure-identity>=1.19,<2",
  "azure-communication-callautomation>=1.5,<2",
  "azure-cognitiveservices-speech>=1.42,<2",
  "azure-search-documents>=11.6,<12",
  "azure-cosmos>=4.9,<5",
  "opentelemetry-api>=1.29,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "httpx>=0.28,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
